updated resume link and friendfinder description to be less passive aggressive

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
             <a href='https://www.linkedin.com/in/brandon-lublin-78a550a8/'><img class='logoLink'
                     src="assets/images/linkedin.svg" alt="linkedin"></a>
 
-            <a href='https://drive.google.com/open?id=0B0XqdtLDfdF9R2pBTEhnUjhFcGNvV1RqUGdVb0RwdFNHX0RR'><img
+            <a href='https://drive.google.com/file/d/1kAjtvwSEw1tqIdWQj7w24C0n1iL8okJ2/view?ths=true'><img
                     class='logoLink' src="assets/images/resume.png" alt="resume"></a>
         </div>
     </ul>
