--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">Friend Finder<i
                                 class="material-icons right">close</i></span>
-                        <p>Scenario: You run into an old acquaintance at a coffee shop. They ask if they can sit down next to you but there's one problem: You can't remember if you enjoy this persons company or not. Here is where FriendFinder comes in handy. Bust out a quick ten question survey and it won't be too difficult to tell whether or not you want this person at your work station ;)</p>
+                        <p>Scenario: You run into an old acquaintance at a coffee shop. They ask if they can sit down next to you but there's one problem: You can't remember how you know this person... Here is where FriendFinder comes in handy. Bust out a quick ten question survey and it won't be too difficult to tell whether or not you want this person at your work station. ;)</p>
                         <br>
                         <ul>
                             <li><strong>Built With:</strong></li>
@@ -127,7 +127,7 @@
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">Stem 🌱<i
                                 class="material-icons right">close</i></span>
-                        <p>Do you ever get tired of going from social media profile to social media profile for each one of your friends? Why isn't there a way to view each of their profiles in one, centralized location? Well, with Stem, there is! We brought together applications like Tumblr and Twitter, and even posted the links to the rest of your favorite contacts' socials in one simple-to-use application. </p>
+                        <p>In the age of the Cell Phone, it's rare that you add contacts directly to your computer. But with cross-device data transfer becoming more and more prevalent, it's more and more likely that you might need to create a contact or a list of contacts to access directly from your computer! Here is where Stem comes in. Stem is a great way to store - not only your personal phone contacts - but links to social media profiles as well, in one centralized location. </p>
                         <br>
                         <ul>
                             <li><strong>Built With:</strong></li>
@@ -273,7 +273,7 @@
                                     src="assets/images/linkedin.svg" alt="linkedin"></a>
 
                             <a
-                                href='https://drive.google.com/open?id=0B0XqdtLDfdF9R2pBTEhnUjhFcGNvV1RqUGdVb0RwdFNHX0RR'><img
+                                href='https://drive.google.com/file/d/1kAjtvwSEw1tqIdWQj7w24C0n1iL8okJ2/view?ths=true'><img
                                     class='logoLink' src="assets/images/resume.png" alt="resume"></a>
                         </div>
                     </div>
