--- a/about.html
+++ b/about.html
@@ -47,29 +47,10 @@
             <a href='https://drive.google.com/file/d/1kAjtvwSEw1tqIdWQj7w24C0n1iL8okJ2/view?ths=true'><img
                     class='logoLink' src="assets/images/resume.png" alt="resume"></a>
         </div>
-    </ul>
-    <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="medium material-icons menuAbout">menu</i></a>
-    <!-- <div class="parallax-container">
-        <div class="parallax"><img src="assets/images/code.jpg"></div>
-    </div> -->
-    <div class="row">
-        <div class="container">
-            <h1 id='name-header col s6'>Brandon Lublin</h1>
-        </div>
-    </div>
-    <h3 class='header teal darken-1'>A Little Bit About Me</h3>
-    <div class="row container">
-        <p class='aboutMe'>My name is Brandon Lublin and I am an aspiring Full Stack developer! I got my first exposure in coding while in highschool. My highschool offered a 'Computer Basics and Web Design' course that taught me basic HTML principles and dabbled in CSS, but this was way back in 2008 so things have changed dramatically since then.</p>
-
-        <p class='aboutMe'>I went to college at Boise State University where I studied History in hopes of getting into Law School but quickly determined that I wasn't cut out for the mass amounts of paperwork that comes with being a lawyer. After a few years away from school, and with my current position integrating a few skills that I thought were fairly similar to coding, I thought what better way to go back to school and finish what I started while trying to jump into a new career that I have a genuine interest in!?</p>
-
-        <p class='aboutMe'>Anything that involves the outdoors is my lifeblood. In the summer, I love to hike, swim, travel, and go to sporting events, and during the winter, you'll have a tough time finding me anywhere else than the mountain. Snowboarding is probably my biggest hobby and there isn't many things I'd rather do than freeze my face off while cruising through some fluffy snow!!</p>
-    </div>
-    <h3 class='header teal darken-1'>Want To Get In Touch?</h3>
-    <div class="container">
-        <div class="row">
+        <div class='email'>
             <form method="POST" action="https://formspree.io/brandonlublin26@gmail.com" class="col s12">
-                <div class="row">
+                <h5 class=''>Want To Get In Touch?</h5>
+                <div class="row names">
                     <div class="input-field col s6">
                         <input id="first_name" type="text" class="validate">
                         <label for="first_name">First Name</label>
@@ -90,11 +71,30 @@
                 <br><br>
             </form>
         </div>
+    </ul>
+    <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="medium material-icons menuAbout">menu</i></a>
+    <div class="row">
+        <div class="container">
+            <h1 id='name-header col s6'>Brandon Lublin</h1>
+            <hr>
+        </div>
     </div>
-    <br><br>
+    <h3 class='center'>A Little Bit About Me</h3>
+    <div class="row">
+        <div class="container">
+            <hr>
+        </div>
+    </div>        
+    <div class="row container">
+        <p class='aboutMe'>My name is Brandon Lublin and I am an aspiring Full Stack developer! I got my first exposure in coding while in highschool. My highschool offered a 'Computer Basics and Web Design' course that taught me basic HTML principles and dabbled in CSS, but this was way back in 2008 so things have changed dramatically since then.</p>
+
+        <p class='aboutMe'>I went to college at Boise State University where I studied History in hopes of getting into Law School but quickly determined that I wasn't cut out for the mass amounts of paperwork that comes with being a lawyer. After a few years away from school, and with my current position integrating a few skills that I thought were fairly similar to coding, I thought what better way to go back to school and finish what I started while trying to jump into a new career that I have a genuine interest in!?</p>
+
+        <p class='aboutMe'>Anything that involves the outdoors is my lifeblood. In the summer, I love to hike, swim, travel, and go to sporting events, and during the winter, you'll have a tough time finding me anywhere else than the mountain. Snowboarding is probably my biggest hobby and there isn't many things I'd rather do than freeze my face off while cruising through some fluffy snow!!</p>
+    </div>
 
     <section>
-        <footer class="page-footer teal darken-1">
+        <footer class="page-footer">
             <div class="container">
                 <div class="row">
                     <div class="col l8 offset-l2 s12">
