--- a/assets/images/index.html
+++ b/assets/images/index.html
@@ -49,30 +49,6 @@
             <a href='https://drive.google.com/open?id=0B0XqdtLDfdF9R2pBTEhnUjhFcGNvV1RqUGdVb0RwdFNHX0RR'><img
                     class='logoLink' src="assets/images/resume.png" alt="resume"></a>
         </div>
-        <div class='email'>
-            <form method="POST" action="https://formspree.io/brandonlublin26@gmail.com" class="col s12">
-                <h5 class=''>Want To Get In Touch?</h5>
-                <div class="row names">
-                    <div class="input-field col s6">
-                        <input id="first_name" type="text" class="validate">
-                        <label for="first_name">First Name</label>
-                    </div>
-                    <div class="input-field col s6">
-                        <input id="last_name" type="text" class="validate">
-                        <label for="last_name">Last Name</label>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="input-field col s12">
-                        <input id="email" type="email" class="validate">
-                        <label for="email">Email</label>
-                    </div>
-                    <button id='submitButton' class='waves-effect waves-light btn-small waves-light'
-                        type="submit">Send Email</button>
-                </div>
-                <br><br>
-            </form>
-        </div>
     </ul>
     <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="medium material-icons menu">menu</i></a>
 
@@ -247,8 +223,8 @@
     <section>
         <div class="row">
             <div class="col s12 m12">
-                <div class="card">
-                    <div class="card-content color">
+                <div class="card teal lighten-2">
+                    <div class="card-content white-text">
                         <span class="card-title"><h2>Skills</h2></span>
                         <br>
                         <h4>Front-End Technology</h4>
