changed fonts to be more readable and updated resume link..

--- a/about.html
+++ b/about.html
@@ -12,8 +12,7 @@
 
     <!-- Compiled and minified JavaScript -->
 
-
-    <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Libre+Baskerville|Poppins" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Libre+Baskerville|Poppins|family=Domine&display=swap|Arvo:400&display=swap" rel="stylesheet">
     <link rel='stylesheet' href='assets/css/style.css'>
     </link>
     <script src="https://code.jquery.com/jquery-3.4.0.js"
@@ -104,7 +103,7 @@
                             <a href='https://www.linkedin.com/in/brandon-lublin-78a550a8/'><img class='logoLink'
                                     src="assets/images/linkedin.svg" alt="linkedin"></a>
                             <a
-                                href='https://drive.google.com/open?id=0B0XqdtLDfdF9R2pBTEhnUjhFcGNvV1RqUGdVb0RwdFNHX0RR'><img
+                                href='https://docs.google.com/document/d/1l2r0gAGJneudepnmQ1eOLJE6K16X0aTzoPHDMrJcogM/edit?usp=sharing'><img
                                     class='logoLink' src="assets/images/resume.png" alt="resume"></a>
                         </div>
                     </div>
