--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Compiled and minified JavaScript -->
 
 
-    <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Libre+Baskerville|Poppins" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Libre+Baskerville|Poppins|family=Domine&display=swap|Arvo:400&display=swap" rel="stylesheet">
     <link rel='stylesheet' href='assets/css/style.css'>
     </link>
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
@@ -297,7 +297,7 @@
                                     src="assets/images/linkedin.svg" alt="linkedin"></a>
 
                             <a
-                                href='https://drive.google.com/file/d/1kAjtvwSEw1tqIdWQj7w24C0n1iL8okJ2/view?ths=true'><img
+                                href='https://docs.google.com/document/d/1l2r0gAGJneudepnmQ1eOLJE6K16X0aTzoPHDMrJcogM/edit?usp=sharing'><img
                                     class='logoLink' src="assets/images/resume.png" alt="resume"></a>
                         </div>
                     </div>
