created slanted appearance on title image, changed fonts and fixed formatting

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
     <div class="parallax-container mainImg">
         <div class="row hero-header">
             <div class="row col l12 m6 s12">
-                <h1 class="headerText">Hello, I'm Brandon Lublin.</h1>
-                <h4 class="headerText">I'm a full stack web developer based out of Seattle, WA.</h4>
+                <h1 class="headerText1">Hello, I'm Brandon Lublin.</h1>
+                <h4 class="headerText2">I'm a full stack web developer based out of Seattle, WA.</h4>
             </div>
         </div>
         <div class="parallax"><img src="assets/images/seattle.jpg"></div>
