removed twitter link, footers were different colors but are now the same. fixed responsiveness of header text

--- a/about.html
+++ b/about.html
@@ -35,7 +35,6 @@
         </li>
         <li><a class="subheader">Links</a></li>
         <li><a class="waves-effect" href="/index.html">Home</a></li>
-        <li><a class="waves-effect" href="twitter.com/brandonlublin">Twitter</a></li>
         <br><br>
         <div class='logoSet'>
             <a href='https://github.com/brandonlublin'><img class='logoLink' src="assets/images/github.svg"
@@ -61,7 +60,7 @@
                 </div>
                 <div class="row">
                     <div class="input-field col s12">
-                        <input id="email" type="email" class="validate">
+                        <input id="text" type="email" class="validate">
                         <label for="email">Email</label>
                     </div>
                     <button id='submitButton' class='waves-effect waves-light btn-small waves-light'
@@ -72,12 +71,6 @@
         </div>
     </ul>
     <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="medium material-icons menuAbout">menu</i></a>
-    <div class="row">
-        <div class="container">
-            <h1 id='name-header col s6'>Brandon Lublin</h1>
-            <hr>
-        </div>
-    </div>
     <h3 class='center'>A Little Bit About Me</h3>
     <div class="row">
         <div class="container">
@@ -92,28 +85,27 @@
         <p class='aboutMe'>Anything that involves the outdoors is my lifeblood. In the summer, I love to hike, swim, travel, and go to sporting events, and during the winter, you'll have a tough time finding me anywhere else than the mountain. Snowboarding is probably my biggest hobby and there isn't many things I'd rather do than freeze my face off while cruising through some fluffy snow!!</p>
     </div>
 
-    <section>
-        <footer class="page-footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col l8 offset-l2 s12">
-                        <div class='logoSet'>
-                            <a href='https://github.com/brandonlublin'><img class='logoLink'
-                                    src="assets/images/github.svg" alt="github"></a>
-                            <a href='https://www.linkedin.com/in/brandon-lublin-78a550a8/'><img class='logoLink'
-                                    src="assets/images/linkedin.svg" alt="linkedin"></a>
-                            <a
-                                href='https://docs.google.com/document/d/1l2r0gAGJneudepnmQ1eOLJE6K16X0aTzoPHDMrJcogM/edit?usp=sharing'><img
-                                    class='logoLink' src="assets/images/resume.png" alt="resume"></a>
-                        </div>
+    <footer class="page-footer teal lighten-4">
+        <div class="container">
+            <div class="row">
+                <div class="col l8 offset-l2 s12">
+                    <div class='logoSet'>
+                        <a href='https://github.com/brandonlublin'><img class='logoLink'
+                                src="assets/images/github.svg" alt="github"></a>
+                        <a href='https://www.linkedin.com/in/brandon-lublin-78a550a8/'><img class='logoLink'
+                                src="assets/images/linkedin.svg" alt="linkedin"></a>
+
+                        <a
+                            href='https://docs.google.com/document/d/1l2r0gAGJneudepnmQ1eOLJE6K16X0aTzoPHDMrJcogM/edit?usp=sharing'><img
+                                class='logoLink' src="assets/images/resume.png" alt="resume"></a>
                     </div>
                 </div>
             </div>
-            <div class="footer-copyright">
-                <div class="container">© 2019 Copyright Brandon Lublin</div>
-            </div>
-        </footer>
-    </section>
+        </div>
+        <div class="footer-copyright">
+            <div class='container'>© 2019 Copyright Brandon Lublin<a href='https://github.com/brandonlublin/portfolio_final'> Source</a></div>
+        </div>
+    </footer>
 </body>
 
 </html>
