--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
         </li>
         <li><a class="subheader">Links</a></li>
         <li><a class="waves-effect" href="/about.html">About Me</a></li>
-        <li><a class="waves-effect" href="https://twitter.com/BrandonLublin">Twitter</a></li>
         <br><br>
         <div class='logoSet'>
             <a href='https://github.com/brandonlublin'><img class='logoLink' src="assets/images/github.svg"
@@ -65,7 +64,7 @@
                 <div class="row">
                     <div class="input-field col s12">
                         <input id="email" type="email" class="validate">
-                        <label for="email">Email</label>
+                        <label for="email">Message</label>
                     </div>
                     <button id='submitButton' class='waves-effect waves-light btn-small waves-light'
                         type="submit">Send Email</button>
