--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <li>
             <div class="divider"></div>
         </li>
-        <li><a class="subheader">Links</a></li>
         <li><a class="waves-effect" href="/about.html">About Me</a></li>
+        <li><a class="waves-effect" href="/contact.html">Contact Me</a></li>
         <br><br>
         <div class='logoSet'>
             <a href='https://github.com/brandonlublin'><img class='logoLink' src="assets/images/github.svg"
@@ -47,30 +47,6 @@
 
             <a href='https://drive.google.com/open?id=0B0XqdtLDfdF9R2pBTEhnUjhFcGNvV1RqUGdVb0RwdFNHX0RR'><img
                     class='logoLink' src="assets/images/resume.png" alt="resume"></a>
-        </div>
-        <div class='email'>
-            <form method="POST" action="https://formspree.io/brandonlublin26@gmail.com" class="col s12">
-                <h5 class=''>Want To Get In Touch?</h5>
-                <div class="row names">
-                    <div class="input-field col s6">
-                        <input id="first_name" type="text" class="validate">
-                        <label for="first_name">First Name</label>
-                    </div>
-                    <div class="input-field col s6">
-                        <input id="last_name" type="text" class="validate">
-                        <label for="last_name">Last Name</label>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="input-field col s12">
-                        <input id="email" type="email" class="validate">
-                        <label for="email">Message</label>
-                    </div>
-                    <button id='submitButton' class='waves-effect waves-light btn-small waves-light'
-                        type="submit">Send Email</button>
-                </div>
-                <br><br>
-            </form>
         </div>
     </ul>
     <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="medium material-icons menu">menu</i></a>
