removed footer until i can figure out why the formatting isn't working

--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
     <!-- Compiled and minified JavaScript -->
 
 
-    <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Libre+Baskerville|Poppins|family=Domine&display=swap|Arvo:400&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css?family=Fjalla+One|Libre+Baskerville|Poppins|family=Domine&display=swap|Arvo:400&display=swap"
+        rel="stylesheet">
     <link rel='stylesheet' href='assets/css/style.css'>
     </link>
-    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+    <link rel="stylesheet"
+        href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <script src="https://code.jquery.com/jquery-3.4.0.js"
         integrity="sha256-DYZMCC8HTC+QDr5QNaIcfR7VSPtcISykd+6eSmBW5qo=" crossorigin="anonymous"></script>
     <script src='assets/javascript/app.js'></script>
@@ -38,15 +41,13 @@
         </li>
         <li><a class="waves-effect" href="/about.html">About Me</a></li>
         <li><a class="waves-effect" href="/contact.html">Contact Me</a></li>
+        <li><a class="waves-effect" href='https://docs.google.com/document/d/1l2r0gAGJneudepnmQ1eOLJE6K16X0aTzoPHDMrJcogM/'>Resume</a></li>
         <br><br>
         <div class='logoSet'>
             <a href='https://github.com/brandonlublin'><img class='logoLink' src="assets/images/github.svg"
                     alt="github"></a>
             <a href='https://www.linkedin.com/in/brandon-lublin-78a550a8/'><img class='logoLink'
                     src="assets/images/linkedin.svg" alt="linkedin"></a>
-
-            <a href='https://drive.google.com/open?id=0B0XqdtLDfdF9R2pBTEhnUjhFcGNvV1RqUGdVb0RwdFNHX0RR'><img
-                    class='logoLink' src="assets/images/resume.png" alt="resume"></a>
         </div>
     </ul>
     <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="medium material-icons menu">menu</i></a>
@@ -62,6 +63,8 @@
     </div>
     <section>
         <div class="row">
+                <h2 id='experience'>My Recent Work</h2>
+                <h6 class='blurbText'>Here are a few recent design projects. You can see more of my projects as well as the source code behind them <a href='https://github.com/brandonlublin'>here</a></h6>
             <div class='col l4 m6 s12'>
                 <div class="card sticky-action">
                     <div class="card-image waves-effect waves-block waves-light">
@@ -102,7 +105,10 @@
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">Friend Finder<i
                                 class="material-icons right">close</i></span>
-                        <p>Scenario: You run into an old acquaintance at a coffee shop. They ask if they can sit down next to you but there's one problem: You can't remember how you know this person... Here is where FriendFinder comes in handy. Bust out a quick ten question survey and it won't be too difficult to tell whether or not you want this person at your work station. ;)</p>
+                        <p>Scenario: You run into an old acquaintance at a coffee shop. They ask if they can sit down
+                            next to you but there's one problem: You can't remember how you know this person... Here is
+                            where FriendFinder comes in handy. Bust out a quick ten question survey and it won't be too
+                            difficult to tell whether or not you want this person at your work station. ;)</p>
                         <br>
                         <ul>
                             <li><strong>Built With:</strong></li>
@@ -126,7 +132,12 @@
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">Stem 🌱<i
                                 class="material-icons right">close</i></span>
-                        <p>In the age of the Cell Phone, it's rare that you add contacts directly to your computer. But with cross-device data transfer becoming more and more prevalent, it's more and more likely that you might need to create a contact or a list of contacts to access directly from your computer! Here is where Stem comes in. Stem is a great way to store - not only your personal phone contacts - but links to social media profiles as well, in one centralized location. </p>
+                        <p>In the age of the Cell Phone, it's rare that you add contacts directly to your computer. But
+                            with cross-device data transfer becoming more and more prevalent, it's more and more likely
+                            that you might need to create a contact or a list of contacts to access directly from your
+                            computer! Here is where Stem comes in. Stem is a great way to store - not only your personal
+                            phone contacts - but links to social media profiles as well, in one centralized location.
+                        </p>
                         <br>
                         <ul>
                             <li><strong>Built With:</strong></li>
@@ -205,15 +216,15 @@
                         <span class="card-title grey-text text-darken-4">Train Station App<i
                                 class="material-icons right">close</i></span>
                         <p>This Train Schedule allows users to view preexisting train schedules as well as add their own
-                        schedule to the interface. Once the user enters each piece of required data, it will be
-                        added to the table, and update the schedule every minute.</p>
+                            schedule to the interface. Once the user enters each piece of required data, it will be
+                            added to the table, and update the schedule every minute.</p>
                         <br>
                         <ul>
                             <li><strong>Built With:</strong></li>
                             <li>JavaScript</li>
                             <li>JQuery</li>
                             <li>Firebase</li>
-                        </ul> 
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -224,7 +235,9 @@
             <div class="col s12 m12">
                 <div class="card">
                     <div class="card-content color">
-                        <span class="card-title"><h2>Skills</h2></span>
+                        <span class="card-title">
+                            <h2>Skills</h2>
+                        </span>
                         <br>
                         <h4>Front-End Technology</h4>
                         <hr>
@@ -259,31 +272,6 @@
         </div>
 
     </section>
-
-    <section>
-        <footer class="page-footer teal lighten-4">
-            <div class="container">
-                <div class="row">
-                    <div class="col l8 offset-l2 s12">
-                        <div class='logoSet'>
-                            <a href='https://github.com/brandonlublin'><img class='logoLink'
-                                    src="assets/images/github.svg" alt="github"></a>
-                            <a href='https://www.linkedin.com/in/brandon-lublin-78a550a8/'><img class='logoLink'
-                                    src="assets/images/linkedin.svg" alt="linkedin"></a>
-
-                            <a
-                                href='https://docs.google.com/document/d/1l2r0gAGJneudepnmQ1eOLJE6K16X0aTzoPHDMrJcogM/edit?usp=sharing'><img
-                                    class='logoLink' src="assets/images/resume.png" alt="resume"></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="footer-copyright">
-                <div class='container'>© 2019 Copyright Brandon Lublin<a href='https://github.com/brandonlublin/portfolio_final'> Source</a></div>
-            </div>
-        </footer>
-    </section>
-
 </body>
 
 </html>
